# dclaw-video

./: .env.example  .gitignore  AGENTS.md  DEPLOYMENT.md  PLAN-v1.2.md  README.md  REVISED-PRD.md  docker-compose.dev.yml  docker-compose.yml  vercel.json
.github/workflows/: build-backend.yml  build-desktop.yml  build-frontend.yml  ci.yml  claude.yml
backend/: Dockerfile  dev.db  pyproject.toml  requirements.txt
backend/app/api/: main.py
backend/app/api/routes/: ai.py  auth.py  projects.py  render.py  scenes.py  storyboard.py  websocket.py
backend/app/core/: celery_app.py  config.py  db.py  security.py  utils.py
backend/app/models/: __init__.py  character.py  project.py  render_job.py  scene.py  storyboard.py  user.py  voice_profile.py
backend/app/repositories/: __init__.py  character.py  project.py  render_job.py  scene.py  storyboard.py  user.py  voice_profile.py
backend/app/schemas/: __init__.py  auth.py  project.py  render_job.py  scene.py
backend/app/services/: ai_service.py  comfyui_client.py  tts_service.py  video_assembler.py
backend/app/tasks/: __init__.py  render_tasks.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_health.py  test_projects.py  test_repositories.py
docs/: README.md  meta.json
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/guides/: index.md  use-cases.md
docs/reference/: api.md  architecture.md  index.md
docs/releases/: index.md
docs/troubleshooting/: common-issues.md  faq.md  index.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/projects/: page.tsx
frontend/app/projects/[id]/: page.tsx
frontend/app/projects/new/: page.tsx
frontend/app/render-queue/: page.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/projects/: page.tsx
frontend/src/app/projects/[id]/: page.tsx
frontend/src/app/projects/new/: page.tsx
frontend/src/components/script-editor/: ScriptEditor.tsx
frontend/src/components/storyboard/: SceneCard.tsx
frontend/src/components/timeline/: TimelinePreview.tsx
frontend/src/lib/: api.ts
helm/: Chart.yaml  values.yaml
helm/dclaw-video/: Chart.yaml  values.yaml
helm/dclaw-video/templates/: _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
