[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dclaw-video"
version = "0.1.0"
description = "AI Video Director & Editor"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.0.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.2.1",
    "minio>=7.2.0",
    "kokoro-onnx>=0.2.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio==0.24.0",
    "aiosqlite>=0.20.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
strict = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["untyped-decorator"]

[[tool.mypy.overrides]]
module = ["celery.*", "celery.result", "soundfile", "minio", "kokoro_onnx", "pydantic_settings", "jose", "passlib.*"]
ignore_missing_imports = true
