[package]
name = "dclaw-video"
version = "0.1.0"
description = "DClaw Video Desktop"
authors = ["DClaw"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
tauri-plugin-fs = "2.0.0-beta"
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-updater = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
